--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ test = ["pytest", "pytest-cov", "flake8"]
 # The following would provide a command line executable called `sample`
 # which executes the function `main` from this package when invoked.
 [project.scripts]
-sample = "anon_excel:main"
+anonex = "anon_excel.transform:main"
 
 
 # This is configuration specific to the `setuptools` build backend.
