--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# project excludes
-data
-
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
@@ -177,3 +174,9 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+# project excludes
+data
+
+proto.ipynb
+.vscode/launch.json
+.vscode/settings.json
