--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3 :: Only",
 ]
-dependencies = ["pandas", "openpyxl"]
+dependencies = ["pandas", "openpyxl", "scipy"]
 [project.optional-dependencies]
 dev = ["check-manifest"]
 test = ["pytest", "pytest-cov", "flake8"]
